--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,10 @@
         }
     },
     "autoload": {
+        "files": [
+            "app/Helpers/multilang.php"
+        ],
+
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
